added image loader to next js Image component

--- a/content/Neque porro quisquam est qui dolorem ipsum.mdx
+++ b/content/Neque porro quisquam est qui dolorem ipsum.mdx
@@ -2,6 +2,7 @@
 date: "2021-04-18 23:00:00"
 title: "Neque porro quisquam est qui dolorem ipsum"
 tags: ["testing", "jest", "javascript", "react", "typescript"]
+image: "Images/thumbnail1.png"
 keywords:
   [
     "testing",
