some changes and created generating feed xml

--- a/content/Neque porro quisquam est qui dolorem ipsum.mdx
+++ b/content/Neque porro quisquam est qui dolorem ipsum.mdx
@@ -17,6 +17,7 @@ keywords:
   ]
 type: "blog"
 public: true
+excerpt: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer libero quam, vestibulum in augue ac, tincidunt volutpat lacus. Pellentesque nibh erat, luctus et iaculis vitae, dignissim aliquet nulla. Pellentesque mattis justo at vehicula aliquam."
 ---
 
 import { SubscribingBlock } from "../components";
